tests/fixtures/invalid/pow_bool_list_bytes.py
# Cannot call pow() with Bool, List[int], Bytes
x = pow(True, [1, 2, 3], b"hello")
